# mgr/server/api/docs/swagger.yaml
@@ -119,6 +119,8 @@ definitions:
       data: {}
       error:
         type: string
+      errorMessage:
+        type: string
       success:
         type: boolean
     type: object
@@ -542,7 +544,7 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
+        "200":
           description: 执行成功
           schema:
             $ref: '#/definitions/clearbill_mgr_server_api_vo.ResponseResult'
@@ -673,7 +675,7 @@ paths:
       produces:
       - application/json
       responses:
-        "201":
+        "200":
           description: 执行成功
           schema:
             $ref: '#/definitions/clearbill_mgr_server_api_vo.ResponseResult'
